# VirtualMachine

./: CMakeLists.txt  README.md  test.masm
docs/: VM.g4
src/: execution.cpp  labels.cpp  main.cpp  parser.cpp  tokenizer.cpp
src/headers/: executor.hpp  labelsprocess.hpp  parser.hpp  tokenizer.hpp
